--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html, body {
+html, body, * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -9,8 +9,22 @@ header {
     background-color: #1F2937;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding: 10px 5%;
+}
+
+#header-logo {
+    font-size: 24px;
+    font-weight: bold;
+    color: #F9FAF8;
 }
 
 .nav-bar li { 
     display: inline;
+    margin-left: 20px;
+}
+
+.nav-bar li a {
+    text-decoration: none;
+    color: #E5E7EB;
 }
